--- a/ascii (1)/ascii (1)/ascii (1).vcxproj
+++ b/ascii (1)/ascii (1)/ascii (1).vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{38E0E4EA-BA38-48F1-847E-8F48BC412848}</ProjectGuid>
-    <RootNamespace>ascii</RootNamespace>
+    <ProjectGuid>{5E67493A-D00C-49E3-9B82-7F239DCCAE7F}</ProjectGuid>
+    <RootNamespace>ascii1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
